--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.47",
+    "@mui/material": "^5.0.0",
+    "@mui/system": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
+    "date-fns-tz": "^1.1.6",
+    "gh-pages": "^2.1.1",
+    "notistack": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-imask": "^6.2.2",
+    "react-number-format": "^4.7.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "typeface-raleway": "^1.1.13",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
